--- a/src/gui/SellerForm.fxml
+++ b/src/gui/SellerForm.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -41,7 +42,7 @@
             <TextField fx:id="txtBaseSalary" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <DatePicker fx:id="dtpBirthDate" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <Label fx:id="lblErrorEmail" textFill="#f40707" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <Label textFill="#f40707" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <Label fx:id="lblErrorBirthDate" textFill="#f40707" GridPane.columnIndex="2" GridPane.rowIndex="3" />
             <Label fx:id="lblErrorBaseSalary" textFill="#f40707" GridPane.columnIndex="2" GridPane.rowIndex="4" />
             <HBox prefHeight="22.0" prefWidth="242.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
                <children>
@@ -49,6 +50,7 @@
                   <Button fx:id="btnCancel" mnemonicParsing="false" onAction="#onBtnCancelAction" text="Cancel" />
                </children>
             </HBox>
+            <ComboBox fx:id="cmbDepartment" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
          </children>
       </GridPane>
    </children>
